[package]
name = "z80_undead"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A Z80 emulator with RetroArch compatibility"
authors = ["Michael Ward <michael@scripthungry.com>"]

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[dev-dependencies]
pretty_assertions = "1.4"
